2013-08-09 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/snmpconsole/snmp_alert.php: fixed the PHP warnings for
	empty objects.

2013-08-09 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/snmpconsole/snmp_alert.php: fixed the link to edit in the
	button to edit, and fixed the free text filter.

2013-08-08 Koichiro Kikuchi <koichiro@rworks.jp>

	* index.php: Fixed footer layout probrems: Now we can see the
	 footer at the browser bottom when reducing the browser height.
	 Also fixes the footer overlay probrem in some pages (e.g.
	 "Modules in policy" page).

2013-08-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* images/zoom_default.svg: tiny fixes make for Carla.

2013-08-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* images/zoom_default.svg: added a beatiful buttom for default zoom
	from Carla job.

2013-08-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_agents.php, include/functions_alerts.php,
	operation/agentes/alerts_status.php: improved the function
	"get_group_alerts" to use in the places that there were a foreach
	loop with all agents for any group.
	
	Fixes: #2060

2013-08-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/modificar_agente.php,
	godmode/agentes/module_manager_editor.php: changed the code to
	avoid to call enterprise functions.
	
	Fixes: #2367
	
	*include/functions_agents.php: fixed source code style..

2013-08-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/estado_agente.php: fixed the call to
	enterprise function.
	
	Fixes: #2367 
	
	* godmode/agentes/module_manager.php: make more easy the merges
	from the last branch.

2013-08-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/setup/setup_auth.php, godmode/admin_access_logs.php,
	godmode/agentes/module_manager.php: removed the code as
	"call time passing variables by reference" deprecated in PHP 5.4.
	
	* index.php: improved the source code style.

2013-08-06 Miguel de Dios <miguel.dedios@artica.es>
	